# algorave

./: Cargo.toml  README.md  rust-shell.nix
frontend/: README.md  frontend.cabal
frontend/examples/programs/: sin_440.txt
frontend/src/exec/: Main.hs
frontend/src/lib/Algorave/Frontend/: Language.hs
frontend/src/lib/Algorave/Language/: Codec.hs  Instruction.hs  Program.hs  Update.hs
src/: examples.rs  lib.rs  main.rs  main_jack.rs
src/backend/: jack.rs  mod.rs
src/backend/util/: sine.rs
src/lang/: codec.rs  instruction.rs  mod.rs  program.rs  update.rs
